set table-div to fixed height and auto overflow style

--- a/app/static/common/css/graph.css
+++ b/app/static/common/css/graph.css
@@ -34,3 +34,8 @@ rect.rect-cursor{
     stroke-width: 2;
     fill: white;
 }
+
+div.history-table-div{
+    height: 500px;
+    overflow: auto;
+}
